<resources>
    <string name="app_name">DoctorCat</string>
    <string name="login_screen_welcome_text">Help is here.</string>
    <string name="welcome_screen_provide_your_cat_text">Provide your cat(s) with the appropriate care.</string>
    <string name="two_cat_silhouettes_content_description">Two cat silhouettes</string>
    <string name="add_reminder_for_your_cat_content_description">Add reminder for your cat</string>
    <string name="no_reminders_warning">No reminders.\nCreate one!</string>
    <string name="login_or_sign_up_button">Login or sign up</string>
    <string name="enter_a_title_hint">Enter a title</string>
    <string name="enter_your_cats_name_hint">Enter your cat\'s name</string>
    <string name="notes">Notes: E.g. Give Starli 2/4 antibiotic tablet before dinner.</string>
    <string name="select_date_hint">Select date</string>
    <string name="select_time_hint">Select time</string>
    <string name="upload_a_picture_text">Upload a picture of your cat</string>
    <string name="missing_notes">-</string>
    <string name="save_button">Save</string>
    <string name="notes_label">Notes:</string>
    <string name="when_label">When:</string>
    <string name="at_helper">at</string>
    <string name="logout_button">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_button">About</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="cat_fact_label">"Cat fact:  "</string>
    <string name="success_reminder_set">Your reminder has been saved.</string>
    <string name="error_set_date_time">You need to set a correct date and time</string>
    <string name="error_set_title">Please set title for your reminder</string>
    <string name="error_set_cat_name">Please enter your cat\'s name</string>
    <string name="about_menu_title">About DoctorCat</string>
    <string name="about_text">Developed by Anastasia Kurmakaeva.\nCat icons made by Freepik.com</string>
    <string name="cat_picture_content_description">Your good boy or girl</string>
    <string name="success_picture_set">Done!</string>
    <string name="something_went_wrong">Something went wrong and a fun cat could not be loaded.</string>
</resources>