<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kurmakaeva.anastasia.doctorcat.addfragment.AddCatReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_large">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_title_hint"
            android:inputType="textCapSentences"
            android:text="@={viewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/catNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_cats_name_hint"
            android:inputType="textCapWords"
            android:text="@={viewModel.catName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <EditText
            android:id="@+id/selectDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date_hint"
            android:text="@={viewModel.date}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/catNameEditText" />

        <EditText
            android:id="@+id/selectTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_time_hint"
            android:text="@={viewModel.time}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectDateEditText" />

        <EditText
            android:id="@+id/notesEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:hint="@string/notes"
            android:inputType="textCapSentences|textMultiLine"
            android:text="@={viewModel.notes}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectTimeEditText" />

        <ImageView
            android:id="@+id/uploadPicture"
            android:layout_width="@dimen/image_upload_size"
            android:layout_height="@dimen/image_upload_size"
            android:contentDescription="@string/upload_a_picture_text"
            app:layout_constraintBottom_toTopOf="@id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectTimeEditText"
            app:srcCompat="@drawable/upload_pic" />

        <TextView
            android:id="@+id/uploadPictureFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:text="@string/upload_a_picture_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadPicture"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>