<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/noRemindersTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_reminders_warning"
        android:textAlignment="center"
        android:drawablePadding="@dimen/padding_medium"
        app:drawableBottomCompat="@drawable/arrow_south_east"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        style="@style/TitleText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catRemindersListRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="always"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/cat_reminder_viewholder" />

    <TextView
        android:id="@+id/catFacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:padding="@dimen/padding_large"
        android:background="@drawable/bubble_red"
        android:textColor="@color/white"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:fadingEdge="horizontal"
        android:singleLine="true"
        android:scrollHorizontally="true"
        tools:text="@string/lorem_ipsum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addFAB"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"
        android:contentDescription="@string/add_reminder_for_your_cat_content_description"
        android:src="@drawable/ic_baseline_add"
        app:backgroundTint="@color/black"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>