<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kurmakaeva.anastasia.doctorcat.listfragment.CatRemindersViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/detail_motion_scene"
        android:layout_margin="@dimen/padding_large">

        <TextView
            android:id="@+id/reminderTitleDetail"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCatReminder.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vet visit" />

        <TextView
            android:id="@+id/catNameDetail"
            style="@style/SubheaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCatReminder.catName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Marce" />

        <TextView
            android:id="@+id/whenDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/when_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCatReminder.date}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="21/04/2021" />

        <TextView
            android:id="@+id/atDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_medium"
            android:text="@string/at_helper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCatReminder.time}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12:00" />

        <TextView
            android:id="@+id/notesDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/notes_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notesDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCatReminder.notes}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>