<?xml version="1.0" encoding="utf-8"?>
<MotionScene
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Transition
        motion:autoTransition="animateToEnd"
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="600">
    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/reminderTitleDetail"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/catNameDetail"
            tools:text="Vet visit" />

        <Constraint
            android:id="@+id/catNameDetail"
            style="@style/SubheaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/whenDetailLabel"
            tools:text="Marce" />

        <Constraint
            android:id="@+id/whenDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/when_label"
            android:textStyle="bold"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/dateDetail" />

        <Constraint
            android:id="@+id/dateDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            motion:layout_constraintEnd_toStartOf="@+id/atDetail"
            motion:layout_constraintHorizontal_bias="0.5"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/notesDetailLabel"
            tools:text="21/04/2021" />

        <Constraint
            android:id="@+id/atDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:paddingHorizontal="@dimen/padding_medium"
            android:text="@string/at_helper"
            motion:layout_constraintBottom_toTopOf="@id/notesDetailLabel"
            motion:layout_constraintEnd_toStartOf="@+id/timeDetail"
            motion:layout_constraintHorizontal_bias="0.5"
            motion:layout_constraintStart_toEndOf="@+id/dateDetail" />

        <Constraint
            android:id="@+id/timeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            motion:layout_constraintBottom_toTopOf="@id/notesDetailLabel"
            motion:layout_constraintHorizontal_bias="0.5"
            motion:layout_constraintStart_toEndOf="@+id/atDetail"
            tools:text="12:00" />

        <Constraint
            android:id="@+id/notesDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/notes_label"
            android:textStyle="bold"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/notesDetail"/>

        <Constraint
            android:id="@+id/notesDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toBottomOf="parent"
            tools:text="" />

    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/reminderTitleDetail"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="1"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/catNameDetail"
            tools:text="Vet visit" />

        <Constraint
            android:id="@+id/catNameDetail"
            style="@style/SubheaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="1"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/reminderTitleDetail"
            motion:layout_constraintBottom_toTopOf="@id/whenDetailLabel"
            tools:text="Marce" />

        <Constraint
            android:id="@+id/whenDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/when_label"
            android:textStyle="bold"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/dateDetail"
            motion:layout_constraintTop_toBottomOf="@id/catNameDetail" />

        <Constraint
            android:id="@+id/dateDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            motion:layout_constraintEnd_toStartOf="@+id/atDetail"
            motion:layout_constraintHorizontal_bias="0.5"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/whenDetailLabel"
            motion:layout_constraintBottom_toTopOf="@id/notesDetailLabel"
            tools:text="21/04/2021" />

        <Constraint
            android:id="@+id/atDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:paddingHorizontal="@dimen/padding_medium"
            android:text="@string/at_helper"
            motion:layout_constraintTop_toBottomOf="@id/whenDetailLabel"
            motion:layout_constraintEnd_toStartOf="@+id/timeDetail"
            motion:layout_constraintHorizontal_bias="0.5"
            motion:layout_constraintStart_toEndOf="@+id/dateDetail" />

        <Constraint
            android:id="@+id/timeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            motion:layout_constraintTop_toBottomOf="@id/whenDetailLabel"
            motion:layout_constraintHorizontal_bias="0.5"
            motion:layout_constraintStart_toEndOf="@+id/atDetail"
            tools:text="12:00" />

        <Constraint
            android:id="@+id/notesDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/notes_label"
            android:textStyle="bold"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/dateDetail"
            motion:layout_constraintBottom_toTopOf="@id/notesDetail"/>

        <Constraint
            android:id="@+id/notesDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="1"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/notesDetailLabel"
            tools:text="" />

    </ConstraintSet>

</MotionScene>